# adventofcode2022

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  adventofcode2022.cabal  day01.bqn  day02.bqn  day03.bqn  day06.bqn  day08.bqn  package.yaml  template.bqn  utils.bqn
app/: Main.hs
src/: AOC.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  DayX.hs  DayXX.hs  Utils.hs  V2Lite.hs  make_day.oil  make_days.oil
src/AOC/: Parse.hs  Parsers.hs
