cabal-version:      2.4
name:               adventofcode2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             James Sully
maintainer:         sullyj3@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable adventofcode2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , adventofcode2022
                    , optics-core ^>=0.4.1
                    , time
    hs-source-dirs:   app
    default-language: Haskell2010

library
    hs-source-dirs:   src
    build-depends:    base ^>=4.16.3.0
                    , optics-core ^>=0.4.1
                    , text
    other-modules: Utils, AOC
    exposed-modules: Day02
                   , Day03
                   , Day04
                   , Day05
                   , Day06
                   , Day07
                   , Day08
                   , Day09
                   , Day10
                   , Day11
                   , Day12
                   , Day13
                   , Day14
                   , Day15
                   , Day16
                   , Day17
                   , Day18
                   , Day19
                   , Day20
                   , Day21
                   , Day22
                   , Day23
                   , Day24
                   , Day25
